# verifytapn

./: CMakeLists.txt  README.md
src/: main.cpp
src/DistanceMeasure/: Distance.cpp  Distance.hpp  dm_README.txt
src/DistanceMeasure/Data/: tawfn.xml  tawfn_export.xml  tel.xml  universal.q
src/DistanceMeasure/TET/: TimedEventTrace.cpp  TimedEventTrace.hpp
src/DistanceMeasure/TETParser/: TETXmlParser.cpp  TETXmlParser.hpp
