cmake_minimum_required(VERSION 3.8)
project(sw9_kode)

set(CMAKE_CXX_STANDARD 14)

include_directories(PUBLIC
        lib
        src/Core
        src/DiscreteVerification
        src/DistanceMeasure)

set(SOURCE_FILES
        cross-compilation/endian.h
        lib/rapidxml-1.13/rapidxml.hpp
        lib/rapidxml-1.13/rapidxml_iterators.hpp
        lib/rapidxml-1.13/rapidxml_print.hpp
        lib/rapidxml-1.13/rapidxml_utils.hpp
        src/Core/QueryParser/Generated/lexer.cpp
        src/Core/QueryParser/Generated/location.hh
        src/Core/QueryParser/Generated/parser.cpp
        src/Core/QueryParser/Generated/parser.hpp
        src/Core/QueryParser/Generated/position.hh
        src/Core/QueryParser/Generated/stack.hh
        src/Core/QueryParser/AST.cpp
        src/Core/QueryParser/AST.hpp
        src/Core/QueryParser/NormalizationVisitor.cpp
        src/Core/QueryParser/NormalizationVisitor.hpp
        src/Core/QueryParser/TAPNQueryParser.cpp
        src/Core/QueryParser/TAPNQueryParser.hpp
        src/Core/QueryParser/Visitor.hpp
        src/Core/TAPN/InhibitorArc.cpp
        src/Core/TAPN/InhibitorArc.hpp
        src/Core/TAPN/OutputArc.cpp
        src/Core/TAPN/OutputArc.hpp
        src/Core/TAPN/TAPN.hpp
        src/Core/TAPN/TimedArcPetriNet.cpp
        src/Core/TAPN/TimedArcPetriNet.hpp
        src/Core/TAPN/TimedInputArc.cpp
        src/Core/TAPN/TimedInputArc.hpp
        src/Core/TAPN/TimedPlace.cpp
        src/Core/TAPN/TimedPlace.hpp
        src/Core/TAPN/TimedTransition.cpp
        src/Core/TAPN/TimedTransition.hpp
        src/Core/TAPN/TimeInterval.cpp
        src/Core/TAPN/TimeInterval.hpp
        src/Core/TAPN/TimeInvariant.cpp
        src/Core/TAPN/TimeInvariant.hpp
        src/Core/TAPN/TransportArc.cpp
        src/Core/TAPN/TransportArc.hpp
        src/Core/TAPNParser/TAPNXmlParser.cpp
        src/Core/TAPNParser/TAPNXmlParser.hpp
        src/Core/TAPNParser/util.cpp
        src/Core/TAPNParser/util.hpp
        src/Core/ArgsParser.cpp
        src/Core/ArgsParser.hpp
        src/Core/VerificationOptions.cpp
        src/Core/VerificationOptions.hpp
        src/DiscreteVerification/DataStructures/binarywrapper.h
        src/DiscreteVerification/DataStructures/CoveredMarkingVisitor.cpp
        src/DiscreteVerification/DataStructures/CoveredMarkingVisitor.h
        src/DiscreteVerification/DataStructures/MarkingEncoder.h
        src/DiscreteVerification/DataStructures/MarkingStore.h
        src/DiscreteVerification/DataStructures/MetaData.h
        src/DiscreteVerification/DataStructures/NonStrictMarking.hpp
        src/DiscreteVerification/DataStructures/NonStrictMarkingBase.cpp
        src/DiscreteVerification/DataStructures/NonStrictMarkingBase.hpp
        src/DiscreteVerification/DataStructures/ptrie.h
        src/DiscreteVerification/DataStructures/PTrieMarkingStore.h
        src/DiscreteVerification/DataStructures/PWList.cpp
        src/DiscreteVerification/DataStructures/PWList.hpp
        src/DiscreteVerification/DataStructures/SimpleMarkingStore.h
        src/DiscreteVerification/DataStructures/TimeDart.hpp
        src/DiscreteVerification/DataStructures/TimeDartLivenessPWList.cpp
        src/DiscreteVerification/DataStructures/TimeDartLivenessPWList.hpp
        src/DiscreteVerification/DataStructures/TimeDartPWList.cpp
        src/DiscreteVerification/DataStructures/TimeDartPWList.hpp
        src/DiscreteVerification/DataStructures/visitor.h
        src/DiscreteVerification/DataStructures/Waiting.h
        src/DiscreteVerification/DataStructures/WaitingList.cpp
        src/DiscreteVerification/DataStructures/WaitingList.hpp
        src/DiscreteVerification/DataStructures/WorkflowPWList.cpp
        src/DiscreteVerification/DataStructures/WorkflowPWList.hpp
        src/DiscreteVerification/SearchStrategies/LivenessWeightQueryVisitor.cpp
        src/DiscreteVerification/SearchStrategies/LivenessWeightQueryVisitor.hpp
        src/DiscreteVerification/SearchStrategies/NonStrictBFS.hpp
        src/DiscreteVerification/SearchStrategies/NonStrictDFS.hpp
        src/DiscreteVerification/SearchStrategies/NonStrictDFSHeuristic.hpp
        src/DiscreteVerification/SearchStrategies/NonStrictDFSRandom.hpp
        src/DiscreteVerification/SearchStrategies/NonStrictHeuristic.hpp
        src/DiscreteVerification/SearchStrategies/NonStrictRandom.hpp
        src/DiscreteVerification/SearchStrategies/SearchFactory.h
        src/DiscreteVerification/SearchStrategies/SearchStrategies.hpp
        src/DiscreteVerification/SearchStrategies/SearchStrategy.hpp
        src/DiscreteVerification/SearchStrategies/WeightQueryVisitor.cpp
        src/DiscreteVerification/SearchStrategies/WeightQueryVisitor.hpp
        src/DiscreteVerification/SearchStrategies/WorkflowMinFirst.hpp
        src/DiscreteVerification/Util/IntervalOps.cpp
        src/DiscreteVerification/Util/IntervalOps.hpp
        src/DiscreteVerification/VerificationTypes/AbstractNaiveVerification.hpp
        src/DiscreteVerification/VerificationTypes/LivenessSearch.cpp
        src/DiscreteVerification/VerificationTypes/LivenessSearch.hpp
        src/DiscreteVerification/VerificationTypes/SafetySynthesis.cpp
        src/DiscreteVerification/VerificationTypes/SafetySynthesis.h
        src/DiscreteVerification/VerificationTypes/TimeDartLiveness.cpp
        src/DiscreteVerification/VerificationTypes/TimeDartLiveness.hpp
        src/DiscreteVerification/VerificationTypes/TimeDartReachabilitySearch.cpp
        src/DiscreteVerification/VerificationTypes/TimeDartReachabilitySearch.hpp
        src/DiscreteVerification/VerificationTypes/TimeDartVerification.cpp
        src/DiscreteVerification/VerificationTypes/TimeDartVerification.hpp
        src/DiscreteVerification/VerificationTypes/Verification.hpp
        src/DiscreteVerification/VerificationTypes/Workflow.hpp
        src/DiscreteVerification/VerificationTypes/WorkflowSoundness.cpp
        src/DiscreteVerification/VerificationTypes/WorkflowSoundness.hpp
        src/DiscreteVerification/VerificationTypes/WorkflowStrongSoundness.cpp
        src/DiscreteVerification/VerificationTypes/WorkflowStrongSoundness.hpp
        src/DiscreteVerification/DeadlockVisitor.cpp
        src/DiscreteVerification/DeadlockVisitor.hpp
        src/DiscreteVerification/DiscreteVerification.cpp
        src/DiscreteVerification/DiscreteVerification.hpp
        src/DiscreteVerification/Generator.cpp
        src/DiscreteVerification/Generator.h
        src/DiscreteVerification/PlaceVisitor.cpp
        src/DiscreteVerification/PlaceVisitor.hpp
        src/DiscreteVerification/QueryVisitor.hpp
        src/DiscreteVerification/ReducingGenerator.cpp
        src/DiscreteVerification/ReducingGenerator.hpp
        src/DiscreteVerification/TimeDartSuccessorGenerator.cpp
        src/DiscreteVerification/TimeDartSuccessorGenerator.hpp
        src/main.cpp
        src/DistanceMeasure/TET/TimedEventTrace.hpp
        src/DistanceMeasure/TET/TimedEventTrace.cpp
        src/DistanceMeasure/Distance.cpp
        src/DistanceMeasure/Distance.hpp src/DistanceMeasure/TETParser/TETXmlParser.cpp src/DistanceMeasure/TETParser/TETXmlParser.hpp)

add_executable(sw9_kode ${SOURCE_FILES})